# towards-agi

./: .gitignore  README.md
complex qa/: recursive_retriever_document_agent_subquestion_query_qa_llamaindex.ipynb  top_k_retrieval_cross_encoder_qasper_rag_weaviate.ipynb
knowledge graphs/: knowledge_graph_rebel_vs_llamaindex.ipynb  link-prediction-ultra-nodepiece-gcn-gat-graphsage-node2vec.ipynb
knowledge graphs/neo4j-rag/my-app/: README.md  pyproject.toml
knowledge graphs/neo4j-rag/my-app/app/: server.py
knowledge graphs/neo4j-rag/neo4j-rag-agent/: README.md
retrieval augmented generation/: integrated-qa-neo4j-langchain.ipynb  llama2-7b-medical-qa-rag.ipynb
retrieval augmented generation/integrated-qa-neo4j-langchain-semi-structured-data/: graph-construction.ipynb  main.ipynb
