[tool.poetry]
name = "__app_name__"
version = "0.1.0"
description = ""
authors = ["Saurav Joshi <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.22"}
neo4j-advanced-rag = {path = "packages/neo4j-advanced-rag", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
